# Auto-VAULT

./: .gitignore  README.md  pyproject.toml
data/sources/: manifest.json
data/sources/demand/: national_grid_load_shape_sample.csv
data/sources/emissions/: defra_2024_scope2_factor.csv
data/sources/market/: entsoe_day_ahead_prices_sample.csv
data/sources/planning/: uk_budget_assumptions.json  uk_finance_assumptions.json
docs/: presentation_guide.md  presentation_script.md  uk_case_study.md
src/auto_vault/: __init__.py  cli.py  constants.py  demo.py  emissions.py  finance.py  forecasting.py  io.py  models.py  paths.py  reporting.py  sources.py  synthetic.py  validation.py
tests/: test_demo.py  test_emissions.py  test_finance.py  test_forecasting.py  test_reporting.py  test_synthetic.py  test_validation.py
tests/fixtures/: expected_budget_forecast_summary.json  expected_company_emissions.json  expected_demo_metrics.json  expected_finance_summary.json  expected_validation_summary.json
