[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-vault"
version = "0.1.0"
description = "UK energy invoice validation and Scope 2 reporting MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
auto-vault = "auto_vault.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
